--- a/index.html
+++ b/index.html
@@ -169,10 +169,10 @@
       <strong>Montserry University</strong>, <strong>Newton Institute</strong>, and <strong>Arden School of Design</strong>.
       Build real skills, collect badges, and access opportunities across India.
     </p>
-    <form class="sub-form" onsubmit="openModal(event)">
-      <input type="email" placeholder="Your email" aria-label="Email" required>
-      <button class="btn" type="submit">Subscribe & Start</button>
-    </form>
+    <form class="sub-form" action="register.html" method="get">
+  <input type="email" placeholder="Your email" aria-label="Email" required>
+  <button class="btn" type="submit">Subscribe & Start</button>
+</form>
     <small>Parents & teachers welcome — let’s spark a brighter tomorrow, together.</small>
   </div>
 </header>
@@ -316,3 +316,4 @@
 </script>
 </body>
 </html>
+
