--- a/submission.html
+++ b/submission.html
@@ -55,8 +55,7 @@
   <div id="content" class="loading">Loading subscriber data...</div>
 
   <script>
-    // Replace with your Google Apps Script Web App URL
-    const scriptURL = "PASTE_YOUR_WEB_APP_URL_HERE";
+    const scriptURL = "https://script.google.com/macros/s/AKfycbw8oyCDxE2Ym27s1w1HZse6EeMEPLhWLTax90nG2W0V6It01kMTThNHqjEib8oONaxz/exec";
 
     fetch(scriptURL)
       .then(res => res.json())
@@ -97,4 +96,3 @@
   </script>
 </body>
 </html>
-
