--- a/subscribe.html
+++ b/subscribe.html
@@ -13,7 +13,7 @@
   <p id="status"></p>
 
   <script>
-    const scriptURL = "PASTE_YOUR_WEB_APP_URL_HERE";
+    const scriptURL = "https://script.google.com/macros/s/AKfycbxmmldZI5DJGdUzS9iZpJgTdcYa5jSMdWBq8W7v9bywnwvQ1D9OJE9rEcGU2KKacrCo/exec";
     document.getElementById("subscribeForm").addEventListener("submit", function(e) {
       e.preventDefault();
       fetch(scriptURL, {
