--- a/index.html
+++ b/index.html
@@ -174,6 +174,12 @@
       <input type="email" placeholder="Your email" aria-label="Email" required>
       <button class="btn" type="submit">Subscribe & Start</button>
     </form>
+    <div style="margin-top:16px;">
+  <a href="subscribe.html">
+    <button type="button" class="btn">Go to Full Subscription Form</button>
+  </a>
+</div>
+
     <small>Parents & teachers welcome — let’s spark a brighter tomorrow, together.</small>
   </div>
 </header>
@@ -317,3 +323,4 @@
 </script>
 </body>
 </html>
+
