--- a/whiteboard.html
+++ b/whiteboard.html
@@ -38,6 +38,7 @@
     }
     .save-btn { background: #76b900; color: white; }
     .clear-btn { background: crimson; color: white; }
+    .home-btn { background: #222; color: white; margin-left: auto; }
     .note {
       position: absolute;
       background: yellow;
@@ -76,6 +77,7 @@
     <button id="note">Sticky Note</button>
     <button class="clear-btn" id="clear">Clear</button>
     <button class="save-btn" id="save">Save</button>
+    <button class="home-btn" onclick="window.location.href='index.html'">🏠 Home</button>
   </div>
 
   <canvas id="board"></canvas>
