--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <style>
   :root{
-    --vv-green:#76b900;
-    --vv-purple:#4300b9;
+    --vv-green:#76b900;    /* vivid green */
+    --vv-purple:#4300b9;   /* vivid purple */
     --vv-dark:#141316;
     --vv-text:#2c2c2c;
     --vv-muted:#6b6b6b;
@@ -19,44 +19,82 @@
     --shadow:0 10px 30px rgba(0,0,0,.08);
   }
   *{box-sizing:border-box}
-  body{margin:0;font-family:'Lora',serif;background:var(--vv-bg);color:var(--vv-text);line-height:1.6;}
+  html,body{margin:0}
+  body{
+    font-family:'Lora', serif;
+    color:var(--vv-text);
+    background:var(--vv-bg);
+    line-height:1.6;
+  }
 
-  /* NAVBAR */
-  .nav{position:sticky;top:0;z-index:50;background:#fff;border-bottom:1px solid #ececf0;box-shadow:0 6px 14px rgba(67,0,185,0.05);}
-  .nav-inner{max-width:1100px;margin:0 auto;padding:10px 20px;display:flex;align-items:center;justify-content:space-between;gap:16px;}
-  .brand{display:flex;align-items:center;gap:12px}
-  .brand img{height:48px}
-  .brand .name{font:800 1.5rem/1 'Montserrat',sans-serif;color:var(--vv-purple)}
-  .menu{display:flex;gap:18px}
-  .menu a{font:600 0.95rem 'Montserrat',sans-serif;color:var(--vv-purple);text-decoration:none;padding:8px 12px;border-radius:10px;transition:.2s}
-  .menu a:hover,.menu a.active{background:var(--vv-purple);color:#fff}
+  /* ===== NAVBAR ===== */
+  .nav{
+    position:sticky; top:0; z-index:50;
+    background:#fff; border-bottom:1px solid #ececf0;
+    box-shadow:0 6px 14px rgba(67,0,185,0.05);
+  }
+  .nav-inner{
+    max-width:1100px; margin:0 auto; padding:10px 20px;
+    display:flex; align-items:center; justify-content:space-between; gap:16px;
+  }
+  .brand{display:flex; align-items:center; gap:12px}
+  .brand img{height:48px; width:auto}
+  .brand .name{font:800 1.5rem/1 'Montserrat', sans-serif; color:var(--vv-purple)}
+  .menu{display:flex; gap:18px; align-items:center}
+  .menu a{
+    font:600 0.95rem/1 'Montserrat', sans-serif;
+    color:var(--vv-purple); text-decoration:none;
+    padding:8px 12px; border-radius:10px; transition:all .2s ease;
+  }
+  .menu a:hover,.menu a.active{ background:var(--vv-purple); color:#fff }
 
-  /* HERO */
-  .hero{position:relative;isolation:isolate;min-height:72vh;display:grid;place-items:center;padding:72px 20px 56px;
-        background:radial-gradient(1200px 500px at 10% -10%, rgba(118,185,0,.35),transparent 60%),
-                   radial-gradient(1200px 500px at 110% 10%, rgba(67,0,185,.35),transparent 60%),#0f0d2a;}
-  .hero::before{content:"";position:absolute;inset:0;z-index:-1;background:url('hero.jpg') center/cover no-repeat;opacity:.35;filter:contrast(110%) saturate(110%) blur(1px);}
-  .hero-card{max-width:920px;background:rgba(255,255,255,.92);border-radius:24px;box-shadow:var(--shadow);padding:32px;text-align:center;}
-  .hero h1{font:800 2.5rem/1.2 'Montserrat',sans-serif;color:#111}
-  .hero p{margin:1rem 0 2rem;font-size:1.1rem}
-  .btn{padding:14px 20px;border:none;border-radius:12px;font:700 1rem 'Montserrat',sans-serif;cursor:pointer;
-       background:linear-gradient(135deg,var(--vv-purple),var(--vv-green));color:#fff;box-shadow:0 8px 18px rgba(67,0,185,.18);transition:.2s}
-  .btn:hover{transform:translateY(-2px)}
-  
-  /* SECTIONS */
+  /* ===== HERO ===== */
+  .hero{
+    position:relative; isolation:isolate;
+    min-height:72vh; display:grid; place-items:center;
+    padding:72px 20px 56px;
+    background:
+      radial-gradient(1200px 500px at 10% -10%, rgba(118,185,0,.35),transparent 60%),
+      radial-gradient(1200px 500px at 110% 10%, rgba(67,0,185,.35),transparent 60%),
+      #0f0d2a;
+    overflow:hidden;
+  }
+  .hero::before{
+    content:"";
+    position:absolute; inset:0; z-index:-1;
+    background:url('hero.jpg') center/cover no-repeat;
+    opacity:.35; filter:contrast(110%) saturate(110%) blur(1px);
+  }
+  .hero-card{
+    width:100%; max-width:920px;
+    background:rgba(255,255,255,.92);
+    border-radius:24px; box-shadow:var(--shadow);
+    padding:32px; backdrop-filter:saturate(130%) blur(4px);
+    text-align:center;
+  }
+  .hero h1{font-family:'Montserrat',sans-serif;font-weight:800;font-size:2.4rem;color:#111}
+  .hero p{max-width:760px;margin:.75rem auto 1.25rem;color:#333;font-size:1.05rem}
+  .btn{
+    background:linear-gradient(135deg,var(--vv-purple),var(--vv-green));
+    color:#fff;border:0;padding:14px 20px;border-radius:12px;
+    font-weight:700;font-family:'Montserrat',sans-serif;cursor:pointer;
+    box-shadow:0 8px 18px rgba(67,0,185,.18);transition:.2s;
+  }
+  .btn:hover{opacity:.9}
+
+  /* ===== SECTIONS ===== */
   section{max-width:1100px;margin:64px auto;padding:0 20px}
-  section.card{background:#fff;border-radius:20px;box-shadow:var(--shadow);padding:28px;}
-  h2.section-title{font:800 2rem 'Montserrat',sans-serif;color:#222;margin-bottom:1rem}
+  section.card{ background:#fff; border-radius:20px; box-shadow:var(--shadow); padding:28px; }
+  h2.section-title{ font-family:'Montserrat',sans-serif; font-weight:800; font-size:2rem; margin:.25rem 0 1rem; color:#222 }
   .kit-list{list-style:none;padding:0}
   .kit-list li{background:#fff;margin-bottom:12px;padding:14px 16px;border-left:4px solid var(--vv-purple);border-radius:12px;box-shadow:0 1px 6px rgba(0,0,0,.05)}
 
   .grid-3{display:grid;grid-template-columns:repeat(3,1fr);gap:18px}
-  @media(max-width:900px){.grid-3{grid-template-columns:1fr}}
-
+  @media (max-width:900px){.grid-3{grid-template-columns:1fr}}
   .cardlet{background:#fff;border-radius:16px;padding:18px;box-shadow:var(--shadow)}
-  .cardlet h3{color:var(--vv-purple);font:700 1.2rem 'Montserrat',sans-serif;margin:.2rem 0 .5rem}
+  .cardlet h3{margin:.2rem 0 .35rem;color:var(--vv-purple);font-family:'Montserrat',sans-serif}
 
-  footer{text-align:center;padding:28px 20px;margin-top:72px;color:#8a8a98}
+  footer{margin-top:72px;padding:28px 20px;text-align:center;color:#8a8a98}
 </style>
 </head>
 <body>
@@ -64,11 +102,16 @@
 <!-- NAVBAR -->
 <nav class="nav">
   <div class="nav-inner">
-    <div class="brand"><img src="Valiant Vision.jpg" alt="Valiant Vision logo"><div class="name">Valiant Vision</div></div>
+    <div class="brand">
+      <img src="Valiant Vision.jpg" alt="Valiant Vision logo">
+      <div class="name">Valiant Vision</div>
+    </div>
     <div class="menu">
       <a href="#about" class="active">About Us</a>
       <a href="#problem">Problem</a>
-      <a href="#solution">Solution</a>
+      <a href="#solution">Our Solution</a>
+      <a href="subscribe.html">Subscribe</a>
+      <a href="whiteboard.html">Whiteboard</a>
     </div>
   </div>
 </nav>
@@ -77,7 +120,7 @@
 <header class="hero">
   <div class="hero-card">
     <h1>Give Your Curiosity a Home</h1>
-    <p>Unlock monthly hands-on creativity with kits inspired by mentors from <strong>Montserry University</strong>, <strong>Newton Institute</strong>, and <strong>Arden School of Design</strong>.</p>
+    <p>Unlock monthly creativity kits designed by mentors from leading universities. Join our journey of learning by doing.</p>
     <a href="subscribe.html"><button class="btn">Subscribe Now</button></a>
   </div>
 </header>
@@ -85,49 +128,34 @@
 <!-- ABOUT -->
 <section id="about" class="card">
   <h2 class="section-title">About Valiant Vision</h2>
-  <p>We nurture curiosity with thoughtfully curated kits and a supportive network. Students learn by doing, reflect with guided prompts, and share progress through badges.</p>
+  <p>We nurture curiosity with thoughtfully curated kits and a supportive network. Students learn by doing,
+     reflect with guided prompts, and share progress through a friendly profile and skill badges.</p>
   <ul class="kit-list">
     <li><strong>Interactive Notebooks:</strong> Cut, paste, draw, and reflect to cement ideas.</li>
-    <li><strong>Sticky Notes:</strong> Perfect for brainstorming and group charts.</li>
+    <li><strong>Sticky Notes:</strong> Perfect for brainstorming and collaborative charts.</li>
     <li><strong>Whiteboards & Markers:</strong> Sketch solutions and iterate rapidly.</li>
     <li><strong>Index Cards:</strong> Flashcards, peer quizzes, and sorting activities.</li>
     <li><strong>Colored Pens & Highlighters:</strong> Color-code, mind-map, and make ideas pop.</li>
   </ul>
 </section>
 
-<!-- PROBLEM + SOLUTION -->
+<!-- PROBLEM & SOLUTION -->
 <section id="problem" class="grid-3">
   <div class="cardlet">
     <h3>The Problem</h3>
-    <p>Outside class, many students lack engaging tools, feedback, and recognition. Motivation fades without visible wins.</p>
+    <p>Many students lack engaging tools, feedback, and motivation outside class.</p>
   </div>
   <div class="cardlet" id="solution">
     <h3>Our Solution</h3>
-    <p>Monthly kits + guided prompts + badges. Learners practice, reflect, share, and earn recognitions that open doors.</p>
+    <p>Monthly kits + guided prompts + badges keep learners active, motivated, and confident.</p>
   </div>
   <div class="cardlet">
     <h3>Results</h3>
-    <p>Higher participation, stronger portfolios, and access to internships & competitions via our partner network.</p>
-  </div>
-</section>
-
-<!-- OPPORTUNITIES -->
-<section class="grid-3">
-  <div class="cardlet">
-    <h3>Opportunities</h3>
-    <p>Apply for: GreenTech Internship • FutureLabs AI Hackathon • National Design Sprint.</p>
-  </div>
-  <div class="cardlet">
-    <h3>People</h3>
-    <p><strong>Priya Sharma</strong> • Montserry University — “The kits made me love learning again.”</p>
-  </div>
-  <div class="cardlet">
-    <h3>Keep the Spark Alive</h3>
-    <p>Your dashboard shows kit contents, tasks, and goals immediately after subscribing.</p>
-    <a href="subscribe.html"><button class="btn">Subscribe Now</button></a>
+    <p>Better portfolios, stronger participation, and real-world opportunities with our partners.</p>
   </div>
 </section>
 
 <footer>© 2025 Valiant Vision • Made for curious learners</footer>
+
 </body>
 </html>
